--- a/templates/base.html
+++ b/templates/base.html
@@ -2,24 +2,22 @@
 
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="{% static 'styles/style.css' %}">
     <title>GameStats</title>
+    <link rel="icon" type="image/x-icon" href="{% static 'images/favicon.png' %}">
 </head>
-
 <body>
 <div id="box">
     <header>
 
-        <!-- navigation bar -->
         <h1><a class="home" href="{% url 'home' %}">Home</a></h1>
         <nav>
             <!-- if user has a profile -->
             <a href="#">Games</a>
-            <a href="#">Add Game</a>
+            <a href="{% url 'create game' %}">Add Game</a>
             <a href="#"><u>Report Problem</u></a>
             <!-- if user is staff -->
             <a href="#">Problems</a>
@@ -39,7 +37,7 @@
     {% block content %}
     {% endblock %}
 
-    <!-- footer -->
+
     <footer>
         &copy;MitkoVtori 2023. All rights reserved.
     </footer>
