--- a/static/styles/details.css
+++ b/static/styles/details.css
@@ -25,7 +25,7 @@
     background-blend-mode: multiply;
     z-index: 2;
     border-radius: 10px;
-    background-color: whitesmoke;
+    background-color: #D7DCDE;
 }
 
 .game-header {
@@ -69,7 +69,7 @@
     float: left;
     margin-left: 15px;
     margin-right: 22px;
-    height: 220px;
+    height: 150px;
     border-radius: 50%;
     box-shadow: 0 0 20px -10px rgba(0, 0, 0, 0.5);
 }
@@ -106,14 +106,12 @@
 .buttons {
     height: 10%;
     text-align: right;
-    padding-right: 15px;
-    padding-bottom: 40px;
 }
 
 .button {
     height: 15%;
     background-color: #54557b;
-    padding: 14px;
+    padding: 10px;
     margin-top: auto;
     font-size: 21px;
     color: rgb(255, 255, 255);
