--- a/templates/Profile/details.html
+++ b/templates/Profile/details.html
@@ -10,7 +10,7 @@
                     {% if not user.image %}
                     <img class="game-img" src="{% static 'images/default-user.jpg' %}" alt='user-image'/>
                     {% else %}
-                    <img class="game-img" src="{{ user.image }}" alt='user-image'/>
+                    <img class="game-img" src="..{{ user.image.url }}" alt='user-image'/>
                     {% endif %}
 
                     {% if user.first_name and user.last_name %}
@@ -32,7 +32,7 @@
                     <p>Joined: {{ user.date_joined }}</p>
 
                 <div class="buttons">
-                    <a href="#" class="button">Edit</a>
+                    <a href="{% url 'edit-user' %}" class="button">Edit</a>
                     <a href="{% url 'logout' %}" class="button">Logout</a>
                     <a href="#" class="button">Delete</a>
                 </div>
