--- a/templates/Profile/details.html
+++ b/templates/Profile/details.html
@@ -34,7 +34,7 @@
                 <div class="buttons">
                     <a href="{% url 'edit-user' %}" class="button">Edit</a>
                     <a href="{% url 'logout' %}" class="button">Logout</a>
-                    <a href="#" class="button">Delete</a>
+                    <a href="{% url 'delete-user' %}" class="button">Delete</a>
                 </div>
             </div>
         </div>
