--- a/static/styles/forms.css
+++ b/static/styles/forms.css
@@ -119,6 +119,26 @@ label[for="terms"] > select{
     background-color: #8fa9b9;
 }
 
+.btn.delete {
+    margin-top: 30px;
+    background: #B80E0E;
+    height: 50px;
+    width: 150px;
+    border-radius: 30px;
+    color: white;
+    font-size: 20px;
+    cursor: pointer;
+    font-weight: 600;
+    box-shadow: 6px 6px 6px #cbced1, -6px -6px 6px white;
+    transition: 0.5s;
+}
+
+.btn.delete:hover {
+    color: white;
+    background-color: #E30202;
+    box-shadow: 15px 15px 15px green, -14px -10px 14px yellow;
+}
+
 .container {
     text-align: left;
     margin-top: 0;
