--- a/templates/Games/details.html
+++ b/templates/Games/details.html
@@ -23,8 +23,10 @@
                 <!-- if owner -->
                 <a href="#" class="button">Edit</a>
                 <a href="#" class="button">Delete</a>
+                <!-- anyone can see -->
+                <a href="#" class="button">Comments</a>
                 <!-- if not owner and .is_authenticated -->
-                <a href="{% url 'add-comment' game.title %}" class="button">Comment</a>
+                <a href="{% url 'add-comment' game.id %}" class="button">Rate</a>
             </div>
         </div>
     </section>
