Finished comments page, added edit/delete comment and edit game

--- a/static/styles/comments.css
+++ b/static/styles/comments.css
@@ -1,10 +1,9 @@
 .comment {
     position: relative;
     top: 50px;
-    left: 31%;
+    left: 35%;
     background: white;
     width: 500px;
-    text-align: center;
 }
 
 .username {
@@ -17,4 +16,31 @@
 
 .img {
     width: 45px;
+    position: relative;
+    top: 5px;
+    left: 12px;
+}
+
+.stars {
+    position: absolute;
+    font-size: 14px;
+    top: 32px;
+    left: 50px;
+}
+
+.comment_text {
+    margin-top: 20px;
+}
+
+.button-edit {
+    font-size: 25px;
+    background: lightgreen;
+    border: solid black;
+}
+
+.button-delete {
+    font-size: 35px;
+    color: white;
+    background: red;
+    border: solid black;
 }
