--- a/templates/Games/details.html
+++ b/templates/Games/details.html
@@ -21,7 +21,7 @@
             <!-- Edit/Delete buttons -->
             <div class="buttons">
                 <!-- if owner -->
-                <a href="#" class="button">Edit</a>
+                <a href="{% url 'edit-game' game.id %}" class="button">Edit</a>
                 <a href="#" class="button">Delete</a>
                 <!-- anyone can see -->
                 <a href="{% url 'comments' game.title %}" class="button">Comments</a>
