--- a/templates/Games/delete-game.html
+++ b/templates/Games/delete-game.html
@@ -1,16 +1,16 @@
 {% extends 'base.html' %}
 
 {% block content %}
-    {% if user != comment.creator %}
+    {% if user != game.creator %}
     <p class="no-articles">You do not have access to this page!</p>
     {% else %}
     <section id="register-page" class="content auth">
-        <form action="{% url 'delete-comment' comment.id %}" id="register" method="post">
+        <form action="{% url 'delete-game' game.id %}" id="register" method="post">
             {% csrf_token %}
             <div class="container">
-                <h1>Delete comment</h1>
+                <h1>Are you sure you want to delete this game?</h1>
 
-                <input class="btn delete" style="font-size: 15px;" type="submit" value="Delete Comment">
+                <input class="btn delete" style="font-size: 20px;" type="submit" value="Delete Game">
             </div>
         </form>
     </section>
