--- a/templates/Common/problems.html
+++ b/templates/Common/problems.html
@@ -1,5 +1,6 @@
 {% extends 'base.html' %}
 {% load static %}
+{% load problem_filters %}
 
 {% block content %}
 
@@ -9,7 +10,7 @@
     <p class="no-articles">No problems yet.</p>
     {% else %}
         {% if user.is_staff or user.is_superuser %}
-        {% for problem in problems %}
+        {% for problem in problems|sort %}
         <div class="problem">
             <h1>Type: {{ problem.problem_type }}</h1>
             <h1>Title: {{ problem.title }}</h1>
@@ -19,12 +20,15 @@
             <a target="_blank" href="{{ problem.video_image }}">{{ problem.video_image }}</a>
             {% endif %}
             <div class="buttons">
-                <a href=" url 'delete-report' problem.id " class="button-delete">🗑</a>
+                {% if user.get_username == problem.creator %}
+                <a href="{% url 'edit-problem' problem.id %}" class="button-edit">🖊️</a>
+                {% endif %}
+                <a href="{% url 'delete-problem' problem.id %}" class="button-delete">🗑</a>
             </div>
         </div>
         {% endfor %}
         {% else %}
-        {% for problem in problems %}
+        {% for problem in problems|sort %}
         {% if problem.creator == user.get_username %}
         <div class="problem">
             <h1>Type: {{ problem.problem_type }}</h1>
@@ -35,8 +39,8 @@
             <a target="_blank" href="{{ problem.video_image }}">{{ problem.video_image }}</a>
             {% endif %}
             <div class="buttons">
-                <a href=" url 'edit-report' problem.id " class="button-edit">🖊️</a>
-                <a href=" url 'delete-report' problem.id " class="button-delete">🗑</a>
+                <a href="{% url 'edit-problem' problem.id %}" class="button-edit">🖊️</a>
+                <a href="{% url 'delete-problem' problem.id %}" class="button-delete">🗑</a>
             </div>
         </div>
         {% endif %}
