--- a/templates/Games/delete-comment.html
+++ b/templates/Games/delete-comment.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 {% block content %}
-    {% if user != comment.creator %}
+    {% if user.get_username != comment.creator and not user.is_staff and not user.is_superuser %}
     <p class="no-articles">You do not have access to this page!</p>
     {% else %}
     <section id="register-page" class="content auth">
