--- a/templates/base.html
+++ b/templates/base.html
@@ -15,22 +15,27 @@
 
         <h1><a class="home" href="{% url 'home' %}">Home</a></h1>
         <nav>
-            <!-- if user has a profile -->
             <a href="{% url 'all-games' %}">Games</a>
-            <!-- if user is staff -->
+            {% if user.is_staff or user.is_superuser %}
             <a href="{% url 'create game' %}">Add Game</a>
-            <!-- if user has a profile -->
+            {% endif %}
+            {% if user.is_authenticated %}
             <a href="{% url 'report-problem' %}"><u>Report Problem</u></a>
             <a href="{% url 'problems' %}">Problems</a>
-            <!-- if user is staff -->
-            <a href="{% url 'staff-chat' %}">Staff</a>
-            <!-- if user has a profile -->
+            {% endif %}
+            {% if user.is_staff or user.is_superuser %}
+            <a href="{% url 'staff' %}">Staff</a>
+            {% endif %}
+            {% if user.is_authenticated %}
             <a href="{% url 'user' %}"><u>Profile</u></a>
             <a href="{% url 'logout' %}"><u>Logout</u></a>
-            <!-- if user is superuser -->
-            <a href="/admin/">Admin</a>
-            <!-- if user has no profile -->
+            {% endif %}
+            {% if user.is_staff or user.is_superuser %}
+            <a href="/admin/security/private/command/window/staff/admin/superuser/hidden/access/">Admin</a>
+            {% endif %}
+            {% if not user.is_authenticated %}
             <p><a href="{% url 'login' %}">Login</a>/<a href="{% url 'register' %}">Register</a></p>
+            {% endif %}
 
         </nav>
     </header>
